copy other files to new directories

--- a/parse-metadata.ipynb
+++ b/parse-metadata.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 241,
    "metadata": {
     "collapsed": false
    },
@@ -317,67 +317,27 @@
     "\n",
     "    def copy_files(self):\n",
     "        \"\"\" Copy the LICENSE and CONTRIBUTING files to each folder repo \"\"\"\n",
-    "        files = ['LICENSE', 'CONTRIBUTING.md']\n",
-    "        this_dir = dirname(abspath(__file__))\n",
+    "        files = ['LICENSE.md', 'CONTRIBUTING.md']\n",
+    "        this_dir = sh.pwd().strip()\n",
     "        for _file in files:\n",
     "            sh.cp(\n",
     "                '{0}/templates/{1}'.format(this_dir, _file),\n",
     "                '{0}/'.format(self.book.local_path)\n",
     "            )\n",
     "\n",
-    "        # copy metadata rdf file\n",
-    "        sh.cp(\n",
-    "            self.book.meta.rdf_path,\n",
-    "            '{0}/'.format(self.book.local_path)\n",
-    "        )\n",
-    "\n",
-    "\n",
     "def make(book):\n",
     "    # Initial commit of book files\n",
     "    local_repo = LocalRepo(book)\n",
     "    local_repo.add_all_files()\n",
-    "    local_repo.commit(\"Initial import from British Library originals.\")\n",
+    "    local_repo.commit(\"initial import from British Library originals.\")\n",
     "\n",
     "    # New files commit\n",
-    "    #NewFilesHandler(book)\n",
+    "    NewFilesHandler(book)\n",
     "\n",
-    "    #local_repo.add_all_files()\n",
-    "    #local_repo.commit(\"Adds Readme, contributing and license files to book repo\")\n"
+    "    local_repo.add_all_files()\n",
+    "    local_repo.commit(\"add readme, contributing and license files to book repo\")\n",
+    "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 223,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name '__file__' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-223-6acbb3b0d2c2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mNewFilesHandler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtesttext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_new_files\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-222-d4a6f81c5576>\u001b[0m in \u001b[0;36madd_new_files\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     49\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0madd_new_files\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtemplate_readme\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 51\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy_files\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     52\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mtemplate_readme\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-222-d4a6f81c5576>\u001b[0m in \u001b[0;36mcopy_files\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     70\u001b[0m         \u001b[1;34m\"\"\" Copy the LICENSE and CONTRIBUTING files to each folder repo \"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m         \u001b[0mfiles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34mu'LICENSE'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34mu'CONTRIBUTING.rst'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 72\u001b[1;33m         \u001b[0mthis_dir\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdirname\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mabspath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m__file__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     73\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0m_file\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfiles\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m             sh.cp(\n",
-      "\u001b[1;31mNameError\u001b[0m: name '__file__' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "NewFilesHandler(testtext).add_new_files()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -404,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 244,
    "metadata": {
     "collapsed": false
    },
@@ -425,12 +385,148 @@
       "\n",
       "INFO:sh.command:<Command '/usr/sbin/git add me...(6 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
       "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
-      "INFO:sh.command:<Command '/usr/sbin/git commit...(52 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n"
+      "INFO:sh.command:<Command '/usr/sbin/git commit...(52 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/cp /home/j...(64 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/cp /home/j...(69 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git init .' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/ls' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/ls' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add AL...(2 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add CO...(13 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add LI...(8 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add me...(6 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add RE...(7 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git commit...(62 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Now attempting to initialize a local git repository for text: 002670581 a.k.a. A popular guide to the Geology of the Isle of Wight, with a note on its relation to that of the Isle of Purbeck ... Illustrated, etc\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git init .' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/ls' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/ls' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  metadata\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add AL...(2 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  metadata\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add me...(6 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git commit...(52 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/cp /home/j...(64 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/cp /home/j...(69 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git init .' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/ls' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/ls' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add AL...(2 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add CO...(13 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add LI...(8 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add me...(6 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add RE...(7 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git commit...(62 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Now attempting to initialize a local git repository for text: 001718349 a.k.a. Die Entwickelung der Stadt Fellin und ihrer Verfassung\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git init .' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/ls' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/ls' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  metadata\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add AL...(2 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  metadata\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add me...(6 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git commit...(52 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/cp /home/j...(64 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/cp /home/j...(69 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git init .' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/ls' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/ls' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add AL...(2 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add CO...(13 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add LI...(8 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add me...(6 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add RE...(7 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git commit...(62 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Now attempting to initialize a local git repository for text: 000624240 a.k.a. Chronicles of Casco Bay. [By D. C. Colesworthy.] no. 1\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git init .' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/ls' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/ls' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  metadata\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add AL...(2 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  metadata\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add me...(6 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git commit...(52 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/cp /home/j...(64 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/cp /home/j...(69 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git init .' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/ls' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/ls' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add AL...(2 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add CO...(13 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add LI...(8 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add me...(6 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  CONTRIBUTING.md  LICENSE.md  metadata  README.md\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add RE...(7 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git commit...(62 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n"
      ]
     }
    ],
    "source": [
-    "make(testtext)"
+    "for text in c.texts: \n",
+    "    make(text)"
    ]
   },
   {
