--- a/parse-metadata.ipynb
+++ b/parse-metadata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -89,25 +89,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "/home/jon/Dropbox/Research/git-lit"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -179,7 +172,7 @@
        "3  COLESWORTHY, Daniel Clement.  "
       ]
      },
-     "execution_count": 210,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -218,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -242,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -341,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -349,10 +342,10 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.BLText at 0x7fc642a82358>"
+       "<__main__.BLText at 0x7f36dc58d048>"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,6 +353,31 @@
    "source": [
     "testtext = c.texts[0]\n",
     "testtext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.BLText at 0x7f36dc58d048>,\n",
+       " <__main__.BLText at 0x7f36dc814ef0>,\n",
+       " <__main__.BLText at 0x7f36dc814f28>,\n",
+       " <__main__.BLText at 0x7f36dc58d198>]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.texts"
    ]
   },
   {
@@ -531,20 +549,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-13-64321bdbe0a0>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-13-64321bdbe0a0>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    import 'gitrepo.ipynb'\u001b[0m\n\u001b[1;37m                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Borrowed from the GITenberg project\n",
     "\n",
@@ -559,9 +568,8 @@
     "import github3\n",
     "import sh\n",
     "\n",
-    "from .util.catalog import CdContext\n",
     "try:\n",
-    "    from .secrets import GH_USER, GH_PASSWORD\n",
+    "    from secrets import GH_USER, GH_PASSWORD\n",
     "except:\n",
     "    print(\"no secrets file found, continuing without\")\n",
     "\n",
@@ -581,34 +589,24 @@
     "        \"\"\" Creates an api handler and sets it on self \"\"\"\n",
     "        self.github = github3.login(username=GH_USER, password=GH_PASSWORD)\n",
     "        if hasattr(self.github, 'set_user_agent'):\n",
-    "            self.github.set_user_agent('Project GITenberg: https://gitenberg.github.io/')\n",
-    "        self.org = self.github.organization(login='GITenberg')\n",
+    "            self.github.set_user_agent('Jonathan Reeve: http://jonreeve.com')\n",
+    "        self.org = self.github.organization(login='Git-Lit')\n",
     "        # FIXME: logging\n",
     "        print(\"ratelimit: \" + str(self.org.ratelimit_remaining))\n",
     "\n",
     "    def format_desc(self):\n",
-    "        return u'{0} by {1}\\n is a Project Gutenberg book, now on Github.'.format(\n",
-    "            self.book.meta.title, self.book.meta.author\n",
+    "        return u'{0} by {1} is a British Library book, now on GitHub.'.format(\n",
+    "            self.book.title, self.book.author\n",
     "        )\n",
     "\n",
     "    def format_title(self):\n",
-    "        \"\"\" Takes a string and sanitizes it for Github's url name format \"\"\"\n",
-    "        _title = sub(\"[ ',]+\", '-', self.book.meta.title)\n",
-    "        title_length = 99 - len(str(self.book.book_id)) - 1\n",
-    "        if len(_title) > title_length:\n",
-    "            # if the title was shortened, replace the trailing _ with an ellipsis\n",
-    "            repo_title = \"{0}__{1}\".format(_title[:title_length], self.book.book_id)\n",
-    "        else:\n",
-    "            repo_title = \"{0}_{1}\".format(_title[:title_length], self.book.book_id)\n",
-    "        # FIXME: log debug, title creation\n",
-    "        print(len(repo_title), repo_title)\n",
-    "        return repo_title\n",
+    "        return self.book.book_id # Just using the book ID as a title for now. \n",
     "\n",
     "    def create_repo(self):\n",
     "        self.repo = self.org.create_repo(\n",
     "            self.format_title(),\n",
     "            description=self.format_desc(),\n",
-    "            homepage=u'https://GITenberg.github.io/',\n",
+    "            homepage=u'https://Git-Lit.github.io/',\n",
     "            private=False,\n",
     "            has_issues=True,\n",
     "            has_wiki=False,\n",
@@ -631,6 +629,237 @@
     "                time.sleep(10)\n",
     "                sh.git('push', 'origin', 'master')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:github3:Building a url from ('https://api.github.com', 'orgs', 'Git-Lit')\n",
+      "INFO:requests.packages.urllib3.connectionpool:Starting new HTTPS connection (1): api.github.com\n",
+      "INFO:github3:Attempting to get JSON information from a Response with status code 200 expecting 200\n",
+      "INFO:github3:JSON was returned\n",
+      "INFO:github3:Attempting to get JSON information from a Response with status code 200 expecting 200\n",
+      "INFO:github3:JSON was returned\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ratelimit: 4979\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = GithubRepo(testtext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:github3:Building a url from ('https://api.github.com/orgs/Git-Lit', 'repos')\n",
+      "INFO:requests.packages.urllib3.connectionpool:Resetting dropped connection: api.github.com\n",
+      "INFO:github3:Attempting to get JSON information from a Response with status code 201 expecting 201\n",
+      "INFO:github3:JSON was returned\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git remote...(48 more)' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git push o...(12 more)' call_args {'in': None, 'bg': F...(476 more)>: starting process\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We may have already added a remote origin to this repo\n"
+     ]
+    }
+   ],
+   "source": [
+    "test.create_and_push()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.BLText object at 0x7f36dc58d048>\n",
+      "<__main__.BLText object at 0x7f36dc814ef0>\n",
+      "<__main__.BLText object at 0x7f36dc814f28>\n",
+      "<__main__.BLText object at 0x7f36dc58d198>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for text in c.texts: \n",
+    "    print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:github3:Building a url from ('https://api.github.com', 'orgs', 'Git-Lit')\n",
+      "INFO:requests.packages.urllib3.connectionpool:Starting new HTTPS connection (1): api.github.com\n",
+      "INFO:github3:Attempting to get JSON information from a Response with status code 200 expecting 200\n",
+      "INFO:github3:JSON was returned\n",
+      "INFO:github3:Attempting to get JSON information from a Response with status code 200 expecting 200\n",
+      "INFO:github3:JSON was returned\n",
+      "INFO:github3:Building a url from ('https://api.github.com/orgs/Git-Lit', 'repos')\n",
+      "INFO:github3:Attempting to get JSON information from a Response with status code 201 expecting 201\n",
+      "INFO:github3:JSON was returned\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git remote...(48 more)' call_args {'in': None, 'bg': F...(476 more)>: starting process\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ratelimit: 4975\n",
+      "We may have already added a remote origin to this repo"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git push o...(12 more)' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:github3:Building a url from ('https://api.github.com', 'orgs', 'Git-Lit')\n",
+      "INFO:requests.packages.urllib3.connectionpool:Starting new HTTPS connection (1): api.github.com\n",
+      "INFO:github3:Attempting to get JSON information from a Response with status code 200 expecting 200\n",
+      "INFO:github3:JSON was returned\n",
+      "INFO:github3:Attempting to get JSON information from a Response with status code 200 expecting 200\n",
+      "INFO:github3:JSON was returned\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ratelimit: 4973"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:github3:Building a url from ('https://api.github.com/orgs/Git-Lit', 'repos')\n",
+      "INFO:github3:Attempting to get JSON information from a Response with status code 201 expecting 201\n",
+      "INFO:github3:JSON was returned\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git remote...(48 more)' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git push o...(12 more)' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:github3:Building a url from ('https://api.github.com', 'orgs', 'Git-Lit')\n",
+      "INFO:requests.packages.urllib3.connectionpool:Starting new HTTPS connection (1): api.github.com\n",
+      "INFO:github3:Attempting to get JSON information from a Response with status code 200 expecting 200\n",
+      "INFO:github3:JSON was returned\n",
+      "INFO:github3:Attempting to get JSON information from a Response with status code 200 expecting 200\n",
+      "INFO:github3:JSON was returned\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ratelimit: 4971"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:github3:Building a url from ('https://api.github.com/orgs/Git-Lit', 'repos')\n",
+      "INFO:github3:Attempting to get JSON information from a Response with status code 201 expecting 201\n",
+      "INFO:github3:JSON was returned\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git remote...(48 more)' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git push o...(12 more)' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:github3:Building a url from ('https://api.github.com', 'orgs', 'Git-Lit')\n",
+      "INFO:requests.packages.urllib3.connectionpool:Starting new HTTPS connection (1): api.github.com\n",
+      "INFO:github3:Attempting to get JSON information from a Response with status code 200 expecting 200\n",
+      "INFO:github3:JSON was returned\n",
+      "INFO:github3:Attempting to get JSON information from a Response with status code 200 expecting 200\n",
+      "INFO:github3:JSON was returned\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ratelimit: 4969"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:github3:Building a url from ('https://api.github.com/orgs/Git-Lit', 'repos')\n",
+      "INFO:github3:Attempting to get JSON information from a Response with status code 201 expecting 201\n",
+      "INFO:github3:JSON was returned\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git remote...(48 more)' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'in': None, 'bg': F...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git push o...(12 more)' call_args {'in': None, 'bg': F...(476 more)>: starting process\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for text in c.texts: \n",
+    "    repo = GithubRepo(text)\n",
+    "    repo.create_and_push()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
