--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -16,37 +16,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "class BLText: \n",
+    "class BLText:\n",
+    "    FLICKR_TEMPLATE = 'https://www.flickr.com/photos/britishlibrary/tags/sysnum%s'\n",
+    "    # template below is magic - stolen from Flickr entry for BL photos\n",
+    "    BRITLIB_TEMPLATE = 'http://explore.bl.uk/primo_library/libweb/action/search.do?cs=frb&doc=BLL01%s&dscnt=1&scp.scps=scope:(BLCONTENT)&frbg=&tab=local_tab&srt=rank&ct=search&mode=Basic&dum=true&tb=t&indx=1&vl(freeText0)=%s&fn=search&vid=BLVU1'\n",
+    "    NAMESPACES = {'MODS': 'http://www.loc.gov/mods/v3'}\n",
+    "    \n",
     "    def __init__(self, textdir): \n",
     "        self.textdir = textdir\n",
-    "        self.ID = textdir # alias\n",
-    "        self.book_id = textdir # another alias. TODO: simplify this\n",
-    "        self.local_path = 'data/' + textdir\n",
+    "        self.ID = os.path.basename(textdir) # alias\n",
+    "        self.book_id = self.ID # another alias. TODO: simplify this\n",
     "        self.tree = self.parseMetadata(textdir)\n",
-    "        self.title = self.getTitle()\n",
-    "        self.author = self.getAuthor() \n",
+    "        self.author = self.getAuthor()\n",
+    "        self.flickrURL =  BLText.FLICKR_TEMPLATE % self.ID\n",
+    "        self.britLibURL = BLText.BRITLIB_TEMPLATE % (self.ID, self.ID)\n",
     "\n",
     "    def parseMetadata(self, textdir):\n",
-    "        fullpath = 'data/' + textdir + '/metadata/' + textdir + '.xml'\n",
+    "        fullpath = textdir + '/metadata/' + self.ID + '.xml'\n",
     "        return lxml.etree.parse(fullpath)\n",
     "    \n",
     "    def getText(self, xpath):\n",
-    "        ns = {'MODS': 'http://www.loc.gov/mods/v3'}\n",
-    "        out = self.tree.xpath(xpath + '/text()', namespaces=ns)\n",
+    "        out = self.tree.xpath(xpath + '/text()', namespaces=BLText.NAMESPACES)\n",
     "        if isinstance(out, list): \n",
     "            if len(out) == 1: \n",
     "                # No sense having a list of length one. Get just the string. \n",
     "                out = out[0]\n",
     "        return out\n",
     "    \n",
-    "    def getTitle(self): \n",
+    "    @property\n",
+    "    def title(self):\n",
+    "        # TODO enable caching of this result\n",
     "        return self.getText('//MODS:title')\n",
+    "        \n",
+    "#    def getTitle(self): \n",
+    "#        return self.getText('//MODS:title')\n",
     "        \n",
     "    def getAuthor(self): \n",
     "        rawAuthor = self.getText('//MODS:name[@type=\"personal\"]/MODS:namePart')\n",
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -64,21 +73,16 @@
    "source": [
     "# A collection of BLText objects. \n",
     "class BLCorpus(): \n",
-    "    def __init__(self): \n",
+    "    def __init__(self, corpusDir):\n",
+    "        self.baseDir = corpusDir\n",
+    "        self.texts = []\n",
     "        self.readDataDir()\n",
     "        self.makeDataFrame()\n",
     "\n",
     "    def readDataDir(self): \n",
-    "        thisdir = os.listdir()\n",
-    "        \n",
-    "        if 'data' not in thisdir: \n",
-    "            raise Exception(\"Can't find data directory.\")\n",
-    "\n",
-    "        textdirs = os.listdir('data')\n",
-    "            \n",
-    "        self.texts = [ BLText(textdir) for textdir in textdirs ]\n",
-    "        \n",
-    "        self.metadata = [ [ text.textdir, text.title, text.author ] for text in self.texts ] \n",
+    "        textdirs = os.listdir(self.baseDir)\n",
+    "        self.texts = [ BLText(os.path.join(self.baseDir,textdir)) for textdir in textdirs ]\n",
+    "        self.metadata = [ [ text.ID, text.title, text.author ] for text in self.texts ] \n",
     "    \n",
     "    def makeDataFrame(self): \n",
     "        self.df = pd.DataFrame(self.metadata, columns=['ID', 'Title', 'Author'])\n",
@@ -89,29 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "/home/jon/Dropbox/Research/git-lit"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sh.pwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -119,7 +101,7 @@
     {
      "data": {
       "text/html": [
-       "<div>\n",
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -132,27 +114,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>003233320</td>\n",
-       "      <td>Echoes of the War. [In verse.]</td>\n",
-       "      <td>SALMOND, Charles Adamson.</td>\n",
+       "      <td> 000624240</td>\n",
+       "      <td> Chronicles of Casco Bay. [By D. C. Colesworthy...</td>\n",
+       "      <td> COLESWORTHY, Daniel Clement.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>002670581</td>\n",
-       "      <td>A popular guide to the Geology of the Isle of ...</td>\n",
-       "      <td>NORMAN, Mark William.</td>\n",
+       "      <td> 001718349</td>\n",
+       "      <td> Die Entwickelung der Stadt Fellin und ihrer Ve...</td>\n",
+       "      <td>                    HOLST, C.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>001718349</td>\n",
-       "      <td>Die Entwickelung der Stadt Fellin und ihrer Ve...</td>\n",
-       "      <td>HOLST, C.</td>\n",
+       "      <td> 002670581</td>\n",
+       "      <td> A popular guide to the Geology of the Isle of ...</td>\n",
+       "      <td>        NORMAN, Mark William.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>000624240</td>\n",
-       "      <td>Chronicles of Casco Bay. [By D. C. Colesworthy...</td>\n",
-       "      <td>COLESWORTHY, Daniel Clement.</td>\n",
+       "      <td> 003233320</td>\n",
+       "      <td>                    Echoes of the War. [In verse.]</td>\n",
+       "      <td>    SALMOND, Charles Adamson.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -160,26 +142,48 @@
       ],
       "text/plain": [
        "          ID                                              Title  \\\n",
-       "0  003233320                     Echoes of the War. [In verse.]   \n",
-       "1  002670581  A popular guide to the Geology of the Isle of ...   \n",
-       "2  001718349  Die Entwickelung der Stadt Fellin und ihrer Ve...   \n",
-       "3  000624240  Chronicles of Casco Bay. [By D. C. Colesworthy...   \n",
+       "0  000624240  Chronicles of Casco Bay. [By D. C. Colesworthy...   \n",
+       "1  001718349  Die Entwickelung der Stadt Fellin und ihrer Ve...   \n",
+       "2  002670581  A popular guide to the Geology of the Isle of ...   \n",
+       "3  003233320                     Echoes of the War. [In verse.]   \n",
        "\n",
        "                         Author  \n",
-       "0     SALMOND, Charles Adamson.  \n",
-       "1         NORMAN, Mark William.  \n",
-       "2                     HOLST, C.  \n",
-       "3  COLESWORTHY, Daniel Clement.  "
+       "0  COLESWORTHY, Daniel Clement.  \n",
+       "1                     HOLST, C.  \n",
+       "2         NORMAN, Mark William.  \n",
+       "3     SALMOND, Charles Adamson.  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c = BLCorpus()\n",
+    "c = BLCorpus('data')\n",
     "c.df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<__main__.BLText instance at 0x000000000A9DF348>'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repr(c.texts[0])"
    ]
   },
   {
@@ -864,21 +868,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
